force-app/main/default/objects/Order/fields/DMA_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>DMA_Acceptance_Date__c</fullName>
    <label>Acceptance Date</label>
    <type>Date</type>
</CustomField>