force-app/main/default/objects/Order/fields/DMA_Initial_Deposit_Date__c.field-meta.xml
<CustomField>
    <fullName>DMA_Initial_Deposit_Date__c</fullName>
    <label>Initial Deposit Date</label>
    <type>Date</type>
</CustomField>