force-app/main/default/objects/Order/fields/DMA_Milestone_1_Date__c.field-meta.xml
<CustomField>
    <fullName>DMA_Milestone_1_Date__c</fullName>
    <label>Milestone 1 Date</label>
    <type>Date</type>
</CustomField>